--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Jay Lee <BusyJayLee@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-kvproto = { git = "https://github.com/busyjay/kvproto", branch = "release-5.0-mini-pd" }
+clap = "2.32"
+kvproto = { git = "https://github.com/Grainspring/kvproto_minipd", branch = "release-5.0-mini-pd" }
 grpcio = "0.9.0"
 raft = "0.6.0"
-protobuf = "2.7.0"
-rocksdb = { git = "https://github.com/busyjay/rust-rocksdb", branch = "tikv-5.0-mini-pd" }
+protobuf = "2.8.0"
+rocksdb = { git = "https://github.com/Grainspring/rust-rocksdb" }
 thiserror = "1.0"
 rand = "0.8"
 futures = "0.3"
@@ -20,9 +21,12 @@ bytes = "1.0"
 crossbeam = "0.8"
 parking_lot = "0.11"
 sloggers = "2.0"
+signal = "0.6"
+libc = "0.2"
+nix = "0.11"
+tempdir = "0.3"
 
 [dev-dependencies]
-tempdir = "0.3"
 futures-test = "0.3"
 
 [[test]]
